--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@phosphor-icons/react": "^2.1.7",
     "@prisma/client": "^5.19.0",
+    "axios": "^1.7.6",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
