--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@prisma/client": "^5.19.0",
     "axios": "^1.7.6",
+    "dayjs": "^1.11.13",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
