--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "googleapis": "^144.0.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
+    "next-seo": "^6.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
